add main pointer

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
         <div class="projects" id="projects">
             <h1>Projets :</h1>
             <div class="liste_projets">
-                <div class="projet"><img id="vortex" src="img/logo_vortex_png.png" alt="logo vortex"></div>
-                <div class="projet"><img id="myconfig" src="img/logo_myconfig.png" alt="logo myConfig"></div>
-                <div class="projet"><img id="equilibrium" src="img/equilibrium.png" alt="logo equilibrium"></div>
-                <div class="projet"><img id="blog" src="img/logo_blog.png" alt="blog"></div>
-                <div class="projet"><img id="fakegpt" src="img/FakeGPT.png" alt="FakeGPT"></div>
+                <div class="projet"><img class="main" id="vortex" src="img/logo_vortex_png.png" alt="logo vortex"></div>
+                <div class="projet"><img class="main" id="myconfig" src="img/logo_myconfig.png" alt="logo myConfig">
+                </div>
+                <div class="projet"><img class="main" id="equilibrium" src="img/equilibrium.png" alt="logo equilibrium">
+                </div>
+                <div class="projet"><img class="main" id="blog" src="img/logo_blog.png" alt="blog"></div>
+                <div class="projet"><img class="main" id="fakegpt" src="img/FakeGPT.png" alt="FakeGPT"></div>
             </div>
         </div>
         <div class="skills" id="skills">
