--- a/myconfig.html
+++ b/myconfig.html
@@ -23,16 +23,17 @@
                 <p>Ce petit projet avait pour but de créer un site de configuration de PC.</p>
                 <p>Le projet était le premier que nous avons eu à faire à Ynov avec l'aide de 3 camarades étudiants en
                     informatique.</p>
-                <p>Le site n'a pas été terminé et est resté à l'état de prototype, seul la page d'accueil et la page de
-                    configuration ont été terminées.</p>
+                <p>Le site n'a pas été terminé et est resté à l'état de prototype.</p>
                 <p>Le site n'était pas fonctionnel non plus, seulement le visuel à été fait.</p>
             </div>
         </div>
         <div class="projects" id="projects">
             <h1>Quelques images du projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet"><img id="accueil" src="img/myConfig.png" alt="accueil"></div>
-                <div class="projet"><img id="config" src="img/myConfig_page_config.png" alt="page de configuration">
+                <div class="projet"><img id="accueil" src="img/myConfig_page_accueil.png" alt="accueil"></div>
+                <div class="projet"><img id="config" src="img/myConfig_page_config.png" alt="page de config"></div>
+                <div class="projet"><img id="accueil" src="img/myConfig_page_guides.png" alt="guides"></div>
+                <div class="projet"><img id="accueil" src="img/myConfig_page_connexion.png" alt="page de connexion">
                 </div>
             </div>
         </div>
