--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 </div>
                 <div class="projet"><img class="main" id="blog" src="img/logo_blog.png" alt="blog"></div>
                 <div class="projet"><img class="main" id="fakegpt" src="img/FakeGPT.png" alt="FakeGPT"></div>
+                <div class="projet"><img class="main" id="mangalibrary" src="img/MangaLibrary_logo.png"
+                        alt="MangaLibrary">
+                </div>
             </div>
         </div>
         <div class="skills" id="skills">
