Changements HARD SKILLS

--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                             <p>JavaScript</p>
                         </li>
                         <li>
-                            <p>C#</p>
+                            <p>C# (Unity et Monogame)</p>
+                        </li>
+                        <li>
+                            <p>OBS Studio</p>
                         </li>
                     </ul>
                 </div>
