--- a/mangalibrary.html
+++ b/mangalibrary.html
@@ -23,13 +23,16 @@
                 <p>Ce mini projet consistait en la création d'une petite bibliothèque de manga créée en TypeScript.</p>
                 <p>Le projet est fonctionnel mais uniquement en local. Cet a dire que les données sont sur un fichier
                     interne.</p>
-                <p>Lorsque l'on rafraichi la page, la liste se réinitialise avec des valeurs par défaut</p>
+                <p>Lorsque l'on rafraichi la page, la liste se réinitialise avec des valeurs par défaut.</p>
+                <p>Le site à entièrement été fait en anglais</p>
             </div>
         </div>
         <div class="projects" id="projects">
             <h1> Images du mini projet :</h1>
             <div class="liste_img_projets">
                 <div class="projet"><img id="arrivée" src="img/MangaLibrary_accueil.png" alt="arrivée"></div>
+                <div class="projet"><img id="liste" src="img/MangaLibrary_liste.png" alt="liste par défaut"></div>
+                <div class="projet"><img id="vue" src="img/MangaLibrary_global.png" alt="vue globale"></div>
             </div>
         </div>
         </div>
