Modification page MangaLibrary

--- a/mangalibrary.html
+++ b/mangalibrary.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="seul">
-        <h1><a href="index.html"><img src="img/FakeGPT.png" alt="logo du site"></a></h1>
+        <h1><a href="index.html"><img src="img/MangaLibrary_logo2.png" alt="logo du site"></a></h1>
     </header>
     <main>
         <div class="about">
