--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 </div>
                 <div class="projet"><img class="main" id="equilibrium" src="img/equilibrium.png" alt="logo equilibrium">
                 </div>
+                <div class="projet"><img class="main" id="twitch" src="img/logo_YK.png" alt="logo chaine twitch"></div>
                 <div class="projet"><img class="main" id="blog" src="img/logo_blog.png" alt="blog"></div>
                 <div class="projet"><img class="main" id="fakegpt" src="img/FakeGPT.png" alt="FakeGPT"></div>
                 <div class="projet"><img class="main" id="mangalibrary" src="img/MangaLibrary_logo.png"
