ajout svg qui redirige vers la chaine twitch

--- a/equilibrium.html
+++ b/equilibrium.html
@@ -60,6 +60,12 @@
                     d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128z" />
             </svg>
         </a>
+        <a href="https://www.twitch.tv/yankeezfr">
+            <svg class="social-links" xmlns="http://www.w3.org/2000/svg" height="32" width="32" style="fill: #bbb"
+                viewBox="0 0 512 512">
+                <path
+                    d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z" />
+            </svg>
         </a>
         <div>
             <h1>Contacts</h1>
