--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 <body>
     <header>
         <h1>MAXIME BAUSSANT</h1>
-        <nav>
+        <button class="hamburger" id="hamburger" aria-label="Menu" aria-controls="menu">
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
+        </button>
+        <nav id="menu">
             <ul>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#skills">Compétences</a></li>
-                <li><a href="#actus">Actualités</a></li>
+                <li><a id="nav_a" href="#about">À propos</a></li>
+                <li><a id="nav_a2" href="#projects">Projets</a></li>
+                <li><a id="nav_a3" href="#skills">Compétences</a></li>
+                <li><a id="nav_a4" href="#actus">Actualités</a></li>
             </ul>
         </nav>
     </header>
