ajout page projet phasmohelp non remplie

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 <div class="projet"><img class="main" id="mangalibrary" src="img/MangaLibrary_logo.png"
                         alt="MangaLibrary">
                 </div>
+                <div class="projet"><img class="main" id="phasmohelp" src="img/Phasmohelp_logo.png" alt="phasmohelp">
+                </div>
             </div>
         </div>
         <div class="skills" id="skills">
