--- a/phasmohelp.html
+++ b/phasmohelp.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="seul">
-        <h1><a href="index.html">logo à trouver</a></h1>
+        <h1><a href="index.html"><img class="phasmohelpLogo" src="img/Phasmohelp_logo2.png" alt="logo"></a></h1>
     </header>
     <main>
         <div class="about">
