--- a/phasmohelp.html
+++ b/phasmohelp.html
@@ -20,13 +20,21 @@
         <div class="about">
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
-                <p></p>
+                <p>Le projet consiste simplement en un site pouvant nous aider dans nos recherches.</p>
+                <p>Le site repertorie les 24 entités disponibles dans le jeu.</p>
+                <p>Je me suis fortement inspiré du site cité en source pour faire le miens.</p>
+                <p>L'idée m'est venue car je trouvais que les informations données par le site n'était pas assez
+                    concises et parfois pas rapidement compréhensibles</p>
+                <p>source : <a
+                        href="https://tybayn.github.io/phasmo-cheat-sheet/">https://tybayn.github.io/phasmo-cheat-sheet/</a>
+                </p>
             </div>
         </div>
         <div class="projects" id="projects">
             <h1>Quelques images du projet :</h1>
             <div class="liste_img_projets">
-                <div class="projet"></div>
+                <div class="projet"><img src="img/phasmohelp_background.jpg" alt="background du site"></div>
+                <div class="projet"><img src="img/Phasmohelp_card.png" alt="exemple d'une des 24 cartes"></div>
             </div>
         </div>
     </main>
