modification de la page projet phasmohelp

--- a/phasmohelp.html
+++ b/phasmohelp.html
@@ -24,8 +24,8 @@
                 <p>Le site repertorie les 24 entités disponibles dans le jeu.</p>
                 <p>Je me suis fortement inspiré du site cité en source pour faire le miens.</p>
                 <p>L'idée m'est venue car je trouvais que les informations données par le site n'était pas assez
-                    concises et parfois pas rapidement compréhensibles</p>
-                <p>source : <a
+                    concises et parfois pas rapidement compréhensibles.</p>
+                <p>-> source : <a
                         href="https://tybayn.github.io/phasmo-cheat-sheet/">https://tybayn.github.io/phasmo-cheat-sheet/</a>
                 </p>
             </div>
