Ajout site phasmohelp et modif page projet phasmohelp

--- a/phasmohelp.html
+++ b/phasmohelp.html
@@ -21,7 +21,8 @@
             <h1>Qu'est-ce que ce projet ?</h1>
             <div class="description">
                 <p>Le projet consiste simplement en un site pouvant nous aider dans nos recherches.</p>
-                <p>Le site repertorie les 24 entités disponibles dans le jeu.</p>
+                <p>Le site repertorie des informations sur les 24 entités disponibles dans le jeu.</p>
+                <p>Quelques informations générales sont disponibles également.</p>
                 <p>Je me suis fortement inspiré du site cité en source pour faire le miens.</p>
                 <p>L'idée m'est venue car je trouvais que les informations données par le site n'était pas assez
                     concises et parfois pas rapidement compréhensibles.</p>
@@ -35,6 +36,7 @@
             <div class="liste_img_projets">
                 <div class="projet"><img src="img/phasmohelp_background.jpg" alt="background du site"></div>
                 <div class="projet"><img src="img/Phasmohelp_card.png" alt="exemple d'une des 24 cartes"></div>
+                <div class="projet"><a href="./PhasmoHelp/index.html">Lien vers le site</a></div>
             </div>
         </div>
     </main>
