Modif site phasmohelp

--- a/PhasmoHelp/index.html
+++ b/PhasmoHelp/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="entity-container">
     </div>
-    <a href="yankeez62.github.io">Portfolio</a>
+    <a class="portfolio" href="https://yankeez62.github.io/index.html">Lien vers mon portfolio</a>
 </body>
 
 </html>
