--- a/phasmohelp.html
+++ b/phasmohelp.html
@@ -36,8 +36,8 @@
             <div class="liste_img_projets">
                 <div class="projet"><img src="img/phasmohelp_background.jpg" alt="background du site"></div>
                 <div class="projet"><img src="img/Phasmohelp_card.png" alt="exemple d'une des 24 cartes"></div>
-                <div class="projet"><img src="img/link-icon.png" alt="lien vers site"></div>
             </div>
+            <a id="lienSitePhasmo" href="https://yankeez62.github.io/PhasmoHelp/">Lien vers le site</a>
         </div>
     </main>
     <footer>
