rectification section 'à propos de moi'

--- a/index.html
+++ b/index.html
@@ -35,13 +35,21 @@
             <div class="description">
                 <p>Je m'appelle Maxime, j'ai 22 ans, je suis en deuxième année de Bachelor informatique au campus Ynov
                     de Lille.</p>
+                <p>J'ai, avant ça, fait un DUT Réseaux et Télécommunication pendant 2 ans.</p>
                 <p>Professionnellement, je souhaiterai m'orienter dans l'univers des jeux vidéos.</p>
                 <p>Pour parler plus personnellement :</p>
                 <p>Je suis passionné de jeux vidéo depuis tout petit et j'aimerai en faire mon métier.</p>
                 <p>Je suis également passionné par le Japon, que ce soit les traditions ou les mythes et légendes en
-                    passant par l'animation japonaise ou les mangas.</p>
-                <p>J'ai une collection de couteaux et une collection de minéraux</p>
-                <p>Je fais du théâtre en amateur depuis 2020</p>
+                    passant par l'animation japonaise et les mangas.</p>
+                <p>J'ai une collection de minéraux car je voulais devenir géologue lorsque j'était plus jeune.</p>
+                <p>J'ai aussi une collection de couteau mais uniquement car j'aime le contraste entre leurs beauté et leurs dangerosité</p>
+                <p>Je fais du théâtre en amateur depuis fin 2019</p>
+                <p>Trois petites icones sont disponibles dans le bas de pages à coté de mes informations de contact : </p>
+                <ul>
+                    <li><p>Un lien qui redirige vers mon profil LinkedIn.</p></li>
+                    <li><p>Un lien qui permet de directement télécharger un exemplaire de mon CV.</p></li>
+                    <li><p>Un lien qui redirige vers mon profil Twitch (projet plus personnel).</p></li>
+                </ul>
             </div>
         </div>
         <div class="projects" id="projects">
@@ -116,10 +124,7 @@
         <div class="actus" id="actus">
             <h1>Quelques actualités :</h1>
             <div class="liste_actus">
-                <p class="actus"> Je suis actuellement à la recherche d'un stage en informatique pour valider mon année.
-                </p>
-                <p class="actus"> Ce stage débutera le 1er juillet et sera pour une durée minimale de 6 semaines.</p>
-                <p class="actus"> Je recherche également un contrat pour une alternance dans le milieu du jeu vidéo pour
+                <p class="actus"> Je suis à la recherche d'un contrat pour une alternance dans le milieu du jeu vidéo pour
                     l'année prochaine</p>
             </div>
         </div>
