--- a/blogStage.html
+++ b/blogStage.html
@@ -29,8 +29,8 @@
             <h1>Quelques articles concernant ce stage :</h1>
             <p class="centered">(vous pouvez cliquer sur les titres pour plus de détails concernant l'article)</p>
             <ul>
-                <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
-                <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
+                <li aria-label="descEntreprise1" class="addMargin"><a href="descEntreprise1.html">Baïfall Dream : Une entreprise accueillante</a></li>
+                <li aria-label="intégrationEquipe1.html" class="addMargin"><a href="intégrationEquipe1.html">Mon intégration dans l'équipe.</a></li>
                 <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
                 <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
                 <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
