changement titre blog stage

--- a/blogStage.html
+++ b/blogStage.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="seul">
-        <h1><a href="index.html"><h2>RETOURNER À L'ACCUEIL</h2></a></h1>
+        <h1><a href="index.html"><h2>BLOG STAGE</h2></a></h1>
     </header>
     <main>
         <div class="about">
