ajout de 2 articles au blog stage(s)

--- a/blogStage.html
+++ b/blogStage.html
@@ -31,9 +31,9 @@
             <ul>
                 <li aria-label="descEntreprise1" class="addMargin"><a href="descEntreprise1.html">Baïfall Dream : Une entreprise accueillante</a></li>
                 <li aria-label="intégrationEquipe1.html" class="addMargin"><a href="intégrationEquipe1.html">Mon intégration dans l'équipe.</a></li>
-                <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
-                <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
-                <li class="addMargin"><a href="#">Mon intégration dans l'équipe</a></li>
+                <li aria-label="planTechnique1.html" class="addMargin"><a href="planTechnique1.html">Et sur le plan technique ?</a></li>
+                <li class="addMargin"><a href="#">???????</a></li>
+                <li class="addMargin"><a href="#">???????</a></li>
             </ul>
         </div>
     </main>
