--- a/planTechnique1.html
+++ b/planTechnique1.html
@@ -21,11 +21,24 @@
         <div class="about">
             <h1>Premier stage</h1>
             <div class="projects addMarginLeft" id="projects">
-                <h1>Mon intégration dans l'équipe</h1>
-                <p>Comme dit précédemment, j'ai la chance de réaliser mon stage de fin d'études au sein de l'entreprise Baïfall Dream.</p>
-                <p>Dès mon arrivée au sein de l'équipe, celle-ci a tout de suite pris le temps de me parler et nous avons tous ensemble directement commencé à parler du projet.</p>
-                <p>Malgré les difficultés rencontrées, notamment au niveau de l'absence de cahier des charges, notre maître de stage nous a immédiatement rassurés et nous a aidés à le réaliser tous ensemble.</p>
-                <p><span class="bold">En conclusion,</span> cette intégration s'est globalement bien passée, même si, n'étant que des étudiants, le cahier des charges fut quelque chose d'assez complexe à mettre en œuvre.</p>
+                <h1>Et sur le plan technique ?</h1>
+                <p>Pour rappel, ce stage consiste à refaire un site de web TV de l'entreprise pour qu'il soit plus moderne et fonctionnel.</p>
+                <p>Au début de ce stage, nous avons donc fait tous ensemble le cahier des charges concernant ce projet.</p>
+                <p>Dans celui-ci, nous avons décidé de partir sur des langages simples pour la partie front : </p>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+                <p>Pour ce qui est de la partie back-end, nous sommes partie là dessus :</p>
+                <ul>
+                    <li>PHP</li>
+                    <li>SQL</li>
+                </ul>
+                <p>Ces choix ont été faits par rapport à nos expériences personnelles, car nous avons considéré la durée de ce stage trop courte pour utiliser un langage inconnu.</p>
+                <p>Ayant déjà fait un peu de back-end en PHP et m'occupant principalement de celui-ci dans ce projet, mon choix était évident de partir là-dessus.</p>
+                <p>En ce qui concerne le SQL, c'est un indispensable selon moi pour créer une base de données correcte.</p>
+                <p><span class="bold">En conclusion,</span> ce stage me permet de mettre en pratique mes compétences tout en m'adaptant aux besoins réels d'un projet professionnel. L'utilisation de langages familiers nous permet d'avancer efficacement et de produire un travail de qualité. Je suis impatient de voir les résultats finaux et de continuer à apprendre et à évoluer au sein de cette équipe.</p>
             </div>
         </div>
     </main>
