légère modification au niveau de l'actualité de l'index.html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="actus" id="actus">
             <h1>Quelques actualités :</h1>
             <div class="liste_actus">
-                <p class="actus"> Je suis à la recherche d'un contrat pour une alternance dans le milieu du jeu vidéo pour
+                <p class="actus"> Je suis à la recherche d'un contrat d'alternance dans le milieu du jeu vidéo pour
                     l'année prochaine</p>
             </div>
         </div>
