ajout 4ème article blog stage et modifications orthographe vlogStage.html

--- a/blogStage.html
+++ b/blogStage.html
@@ -22,7 +22,7 @@
             <h1>Premier stage</h1>
             <div class="description">
                 <h2>Voici une petite description générale pour expliquer le contexte avant les articles :</h2>
-                <p>Ce premier stage est un stage obligatoire afin de valider mes compétences acquérit en 2 ans de Bachelor Informatique au sein de l'école Ynov à Lille</p>
+                <p>Ce premier stage est un stage obligatoire afin de valider les compétences que j'ai acquises en 2 ans de Bachelor Informatique au sein de l'école Ynov à Lille.</p>
             </div>
         </div>
         <div class="projects" id="projects">
@@ -32,8 +32,7 @@
                 <li aria-label="descEntreprise1" class="addMargin"><a href="descEntreprise1.html">Baïfall Dream : Une entreprise accueillante</a></li>
                 <li aria-label="intégrationEquipe1.html" class="addMargin"><a href="intégrationEquipe1.html">Mon intégration dans l'équipe.</a></li>
                 <li aria-label="planTechnique1.html" class="addMargin"><a href="planTechnique1.html">Et sur le plan technique ?</a></li>
-                <li class="addMargin"><a href="#">???????</a></li>
-                <li class="addMargin"><a href="#">???????</a></li>
+                <li aria-label="DefisSolutions1.html" class="addMargin"><a href="DefisSolutions1.html">Les défis et solutions lors de mon stage</a></li>
             </ul>
         </div>
     </main>
