ajout dernier article

--- a/conclusion1.html
+++ b/conclusion1.html
@@ -15,26 +15,25 @@
 
 <body>
     <header class="seul">
-        <h1><a href="index.html"><h2>BLOG STAGE</h2></a></h1>
+        <h1><a href="blogStage.html"><h2>PAGE PRÉCÉDENTE</h2></a></h1>
     </header>
     <main>
         <div class="about">
             <h1>Premier stage</h1>
-            <div class="description">
-                <h2>Voici une petite description générale pour expliquer le contexte avant les articles :</h2>
-                <p>Ce premier stage est un stage obligatoire afin de valider les compétences que j'ai acquises en 2 ans de Bachelor Informatique au sein de l'école Ynov à Lille.</p>
+            <div class="projects addMarginLeft" id="projects">
+                <h2>Les conclusions de ce stage</h2>
+                <p>Mon stage chez Baïfall Dream a été une expérience enrichissante.</p>
+                <p>En me confrontant à des défis réels, j'ai eu l'opportunité de mettre en pratique mes connaissances et de trouver des solutions efficaces à des problèmes concrets.</p>
+                <p>Chaque obstacle rencontré n'était pas seulement un défi à surmonter, mais aussi une précieuse occasion d'apprentissage.</p>
+                <p>Que ce soit sur le plan technique ou personnel, j'ai pu développer de nouvelles compétences et renforcer celles que je possédais déjà.</p>
+                <p>La diversité des tâches m'a permis de toucher à différents aspects du développement web, ce qui a été particulièrement formateur.</p>
+                <p>Travailler avec une équipe dévouée et passionnée a été un véritable privilège.</p>
+                <p>J'ai non seulement pu contribuer à un projet stimulant, mais j'ai aussi bénéficié des conseils et de l'expertise de mes collègues, ce qui m'a aidé à grandir professionnellement.</p>
+                <p>À travers ces articles, j'espère avoir réussi à partager avec vous les réalités d'un projet de développement web.</p>
+                <p>Les défis rencontrés m'ont permis de mieux comprendre les compétences nécessaires pour évoluer dans ce domaine et m'ont donné envie de continuer à apprendre et à me perfectionner.</p>
+                <p>Je suis reconnaissant pour cette opportunité qui a marqué un tournant dans mon parcours scolaire et professionnel.</p>
+                <p>Ce stage m'a bien préparé à affronter les défis futurs.</p>
             </div>
-        </div>
-        <div class="projects" id="projects">
-            <h1>Quelques articles concernant ce stage :</h1>
-            <p class="centered">(vous pouvez cliquer sur les titres pour plus de détails concernant l'article)</p>
-            <ul>
-                <li aria-label="descEntreprise1" class="addMargin"><a href="descEntreprise1.html">Baïfall Dream : Une entreprise accueillante</a></li>
-                <li aria-label="intégrationEquipe1.html" class="addMargin"><a href="intégrationEquipe1.html">Mon intégration dans l'équipe.</a></li>
-                <li aria-label="planTechnique1.html" class="addMargin"><a href="planTechnique1.html">Et sur le plan technique ?</a></li>
-                <li aria-label="DefisSolutions1.html" class="addMargin"><a href="DefisSolutions1.html">Les défis et solutions lors de mon stage</a></li>
-                <li aria-label="conclusion1.html" class="addMargin"><a href="conclusion1.html">Les conclusions du stage</a></li>
-            </ul>
         </div>
     </main>
     <footer>
