ajout d'images pour l'article 1

--- a/descEntreprise1.html
+++ b/descEntreprise1.html
@@ -24,6 +24,7 @@
                 <h1>Baïfall Dream : Une entreprise accueillante</h1>
                 <p>J'ai la chance de réaliser mon stage de fin d'études au sein de l'entreprise Baïfall Dream, un acteur innovant dans le domaine de l'art et de la culture.</p>
                 <p>Située à Paris, cette entreprise se distingue par son engagement envers la promotion des artistes émergents et son dévouement à créer des expériences culturelles uniques.</p>
+                <img class="articleImg" src="img/Paris.jpg" alt="photo de Paris">
                 <p>Dans cet article, je vais partager avec vous mes différentes missions sans entrer dans les détails inutiles.</p>
 
                 <p class="bold">Présentation de l'entreprise</p>
@@ -33,7 +34,8 @@
                     <li class="addMargin"><span class="bold">Produits et services :</span> L'entreprise propose une variété de services, incluant des expositions d'art, des événements culturels, des résidences artistiques et des ateliers créatifs. Baïfall Dream organise également des collaborations avec d'autres institutions culturelles et des projets de mécénat.</li>
                 </ul>
                 <p>En tant que stagiaire en Informatique, mes responsabilités sont variées et stimulantes. Voici un aperçu de mes principales missions :</p>
-                <p>La mission globale était de refaire un site de web TV de l'entreprise pour qu'il soit plus moderne et fonctionnel.</p>
+                <p>La mission globale était de refaire, avec une équipe constituées de 3 autres stagiaires, un site de web TV de l'entreprise pour qu'il soit plus moderne et fonctionnel.</p>
+                <img class="articleImg" src="img/travail-de-groupe.jpg" alt="Photo d'une équipe en train de travailler">
 
                     <ul>
                         <li class="addMargin">Définition d'une charte graphique : En collaboration avec l'équipe, nous avons défini une nouvelle charte graphique pour assurer une identité visuelle cohérente et attrayante.</li>
