--- a/intégrationEquipe1.html
+++ b/intégrationEquipe1.html
@@ -21,10 +21,12 @@
         <div class="about">
             <h1>Premier stage</h1>
             <div class="projects addMarginLeft" id="projects">
-                <h1>Mon intégration dans l'équipe</h1>
+                <h2>Mon intégration dans l'équipe</h2>
+                <img class="articleImg" src="img/reunion.jpg" alt="Photo d'une équipe en réunion">
                 <p>Comme dit précédemment, j'ai la chance de réaliser mon stage de fin d'études au sein de l'entreprise Baïfall Dream.</p>
                 <p>Dès mon arrivée au sein de l'équipe, celle-ci a tout de suite pris le temps de me parler et nous avons tous ensemble directement commencé à parler du projet.</p>
                 <p>Malgré les difficultés rencontrées, notamment au niveau de l'absence de cahier des charges, notre maître de stage nous a immédiatement rassurés et nous a aidés à le réaliser tous ensemble.</p>
+                <img class="articleImg" src="img/courbe-apprentissage.png" alt="Courbe d'apprentissage">
                 <p><span class="bold">En conclusion,</span> cette intégration s'est globalement bien passée, même si, n'étant que des étudiants, le cahier des charges fut quelque chose d'assez complexe à mettre en œuvre.</p>
             </div>
         </div>
