ajout d'images pour l'article 3

--- a/planTechnique1.html
+++ b/planTechnique1.html
@@ -21,10 +21,11 @@
         <div class="about">
             <h1>Premier stage</h1>
             <div class="projects addMarginLeft" id="projects">
-                <h1>Et sur le plan technique ?</h1>
+                <h2>Et sur le plan technique ?</h2>
                 <p>Pour rappel, ce stage consiste à refaire un site de web TV de l'entreprise pour qu'il soit plus moderne et fonctionnel.</p>
                 <p>Au début de ce stage, nous avons donc fait tous ensemble le cahier des charges concernant ce projet.</p>
                 <p>Dans celui-ci, nous avons décidé de partir sur des langages simples pour la partie front : </p>
+                <img class="articleImg" src="img/logos-techno.png" alt="images des technologies choisies (hors backend)">
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
