--- a/planTechnique1.html
+++ b/planTechnique1.html
@@ -25,17 +25,18 @@
                 <p>Pour rappel, ce stage consiste à refaire un site de web TV de l'entreprise pour qu'il soit plus moderne et fonctionnel.</p>
                 <p>Au début de ce stage, nous avons donc fait tous ensemble le cahier des charges concernant ce projet.</p>
                 <p>Dans celui-ci, nous avons décidé de partir sur des langages simples pour la partie front : </p>
-                <img class="articleImg" src="img/logos-techno.png" alt="images des technologies choisies (hors backend)">
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
                 </ul>
+                <img class="articleImg" src="img/logos-techno.png" alt="images des technologies choisies (hors backend)">
                 <p>Pour ce qui est de la partie back-end, nous sommes partie là dessus :</p>
                 <ul>
                     <li>PHP</li>
                     <li>SQL</li>
                 </ul>
+                <img class="articleImg" src="img/logos-back.png" alt="images des technologies choisies (pour le backend)">
                 <p>Ces choix ont été faits par rapport à nos expériences personnelles, car nous avons considéré la durée de ce stage trop courte pour utiliser un langage inconnu.</p>
                 <p>Ayant déjà fait un peu de back-end en PHP et m'occupant principalement de celui-ci dans ce projet, mon choix était évident de partir là-dessus.</p>
                 <p>En ce qui concerne le SQL, c'est un indispensable selon moi pour créer une base de données correcte.</p>
