--- a/DefisSolutions1.html
+++ b/DefisSolutions1.html
@@ -22,6 +22,7 @@
             <h1>Premier stage</h1>
             <div class="projects addMarginLeft" id="projects">
                 <h2>Les défis et solutions lors de mon stage</h2>
+                <img class="articleImg" src="img/frameworks-dev.jpeg" alt="Image montrant un développeur en train de résoudre un problème de code, avec des éléments visuels.">
                 <p><span class="bold">Défis rencontrés :</span></p>
                 <p>Dans les précédents articles, j'ai partagé avec vous la nature de mon stage chez Baïfall Dream, mon intégration dans l'équipe, et les aspects techniques du projet.</p>
                 <p>Aujourd'hui, je souhaite revenir sur les défis rencontrés durant ce stage et les solutions que nous avons mises en place pour les surmonter.</p>
@@ -38,6 +39,7 @@
                 <p>Intégrer une fonctionnalité de diffusion en direct sur le site a été un défi technique majeur.</p>
                 <p>Cela nécessitait une compréhension approfondie des protocoles de streaming et une optimisation des performances du site pour gérer des flux vidéo en temps réel.</p>
                 <h2>Sécurité du site</h2>
+                <img class="articleImg" src="img/security-encryption.jpg" alt="Image avec des cadenas, pour symboliser la mise en œuvre des mesures de sécurité.">
                 <p>La sécurité des données est cruciale pour tout site web, et encore plus pour une plateforme diffusant des événements en direct.</p>
                 <p>Nous avons dû nous familiariser avec les meilleures pratiques en matière de sécurité web et mettre en place des mesures robustes pour protéger les informations sensibles.</p>
                 <p><span class="bold">Passons désormais aux solutions apportées</span></p>
