--- a/conclusion1.html
+++ b/conclusion1.html
@@ -28,11 +28,13 @@
                 <p>Que ce soit sur le plan technique ou personnel, j'ai pu développer de nouvelles compétences et renforcer celles que je possédais déjà.</p>
                 <p>La diversité des tâches m'a permis de toucher à différents aspects du développement web, ce qui a été particulièrement formateur.</p>
                 <p>Travailler avec une équipe dévouée et passionnée a été un véritable privilège.</p>
+                <img class="articleImg" src="img/istockphoto-1485341298-170667a.webp" alt="Image de mains tendues pour un 'high-five', symbolisant la collaboration réussie et la satisfaction du travail accompli.">
                 <p>J'ai non seulement pu contribuer à un projet stimulant, mais j'ai aussi bénéficié des conseils et de l'expertise de mes collègues, ce qui m'a aidé à grandir professionnellement.</p>
                 <p>À travers ces articles, j'espère avoir réussi à partager avec vous les réalités d'un projet de développement web.</p>
                 <p>Les défis rencontrés m'ont permis de mieux comprendre les compétences nécessaires pour évoluer dans ce domaine et m'ont donné envie de continuer à apprendre et à me perfectionner.</p>
                 <p>Je suis reconnaissant pour cette opportunité qui a marqué un tournant dans mon parcours scolaire et professionnel.</p>
                 <p>Ce stage m'a bien préparé à affronter les défis futurs.</p>
+                <img class="articleImg" src="img/longue-route-droite.webp" alt="Image montrant une route pour représenter le chemin qu'il reste à parcourir.">
             </div>
         </div>
     </main>
