modification actu et description principale

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     passant par l'animation japonaise et les mangas.</p>
                 <p>J'ai une collection de minéraux car je voulais devenir géologue lorsque j'était plus jeune.</p>
                 <p>J'ai aussi une collection de couteau mais uniquement car j'aime le contraste entre leurs beauté et leurs dangerosité</p>
-                <p>Je fais du théâtre en amateur depuis fin 2019</p>
+                <p>Je fais du théâtre en amateur depuis 2020</p>
                 <p>Trois petites icones sont disponibles dans le bas de pages à coté de mes informations de contact : </p>
                 <ul>
                     <li><p>Un lien qui redirige vers mon profil LinkedIn.</p></li>
@@ -126,8 +126,8 @@
         <div class="actus" id="actus">
             <h1>Quelques actualités :</h1>
             <div class="liste_actus">
-                <p class="actus"> Je suis à la recherche d'un contrat d'alternance dans le milieu du jeu vidéo pour
-                    l'année prochaine</p>
+                <p class="actus"> Je suis à la recherche urgente d'un contrat d'alternance dans le milieu du jeu vidéo pour
+                    l'année 2024/2025</p>
             </div>
         </div>
     </main>
