Modification index.html (Port-folio > Portfolio)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Port-folio</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
@@ -33,10 +33,10 @@
         <div class="about" id="about">
             <h1>À propos de moi :</h1>
             <div class="description">
-                <p>Je m'appelle Maxime, j'ai 22 ans, je suis en deuxième année de Bachelor informatique au campus Ynov
+                <p>Je m'appelle Maxime, j'ai 23 ans, je suis en troisième année de Bachelor informatique au campus Ynov
                     de Lille.</p>
+                <p>Je me suis spécialisé dans la programmation de jeux vidéo cette année.</p>
                 <p>J'ai, avant ça, fait un DUT Réseaux et Télécommunication pendant 2 ans.</p>
-                <p>Professionnellement, je souhaiterai m'orienter dans l'univers des jeux vidéos.</p>
                 <p>Pour parler plus personnellement :</p>
                 <p>Je suis passionné de jeux vidéo depuis tout petit et j'aimerai en faire mon métier.</p>
                 <p>Je suis également passionné par le Japon, que ce soit les traditions ou les mythes et légendes en
