ajout début jeu 'first try'

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <p class="centered">(vous pouvez cliquer sur les images pour plus de détails)</p>
             <div class="liste_projets">
                 <div class="projet"><img class="main" id="blogStage" src="img/BLOG STAGES.png" alt="images blog stages"></div>
+                <div class="projet"><img class="main" id="firstTry" src="img/FirstTry.png" alt="image 1er jeu sous Unreal Engine 5"></div>
                 <div class="projet"><img class="main" id="twitch" src="img/logo_YK.png" alt="logo chaine twitch"></div>
                 <div class="projet"><img class="main" id="phasmohelp" src="img/Phasmohelp_logo.png" alt="phasmohelp">
                 </div>
