--- a/firstTryMecaniques1.html
+++ b/firstTryMecaniques1.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="seul">
-        <h3><a href="firstTry.html"><h4>PAGE PRINCIPALE</h4></a></h3>
+        <h3><a href="firstTry.html"><h4>Page précédente</h4></a></h3>
     </header>
     <main>
         <div class="about">
