--- a/firstTryNiveau1.html
+++ b/firstTryNiveau1.html
@@ -7,21 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <title>First Try</title>
 </head>
 
 <body>
     <header class="seul">
-        <h3><a href="firstTry.html"><h4>PAGE PRINCIPALE</h4></a></h3>
+        <h3><a href="firstTry.html"><h4>Page précédente</h4></a></h3>
     </header>
     <main>
         <div class="about">
-            <h1>First Try</h1>
+            <h1>First Try - Niveau 1</h1>
             <div class="projects addMarginLeft" id="projects">
-                <!-- iuhgiuhs -->
+                <p>Avant de montrer le premier niveau, je tenais à préciser que les visuels ne sont pas définitifs.</p>
+                <p>Je voulais aussi dire que ce niveau 1 est volontairement très court et ce veux être comme une sorte de tutoriel pour le jeu.</p>
+                <p>Vous pouvez voir une vidéo de présentation juste ici :</p>
+                <video controls class="big" src="videos/firstTryLevelOne.mp4" type="video/mp4"></video>
             </div>
         </div>
     </main>
