ajout vidéo first try niveau 1 et modif but du jeu global

--- a/firstTryNiveau1.html
+++ b/firstTryNiveau1.html
@@ -22,7 +22,10 @@
                 <p>Avant de montrer le premier niveau, je tenais à préciser que les visuels ne sont pas définitifs.</p>
                 <p>Je voulais aussi dire que ce niveau 1 est volontairement très court et ce veux être comme une sorte de tutoriel pour le jeu.</p>
                 <p>Vous pouvez voir une vidéo de présentation juste ici :</p>
-                <video controls class="big" src="videos/firstTryLevelOne.mp4" type="video/mp4"></video>
+                <video controls class="big">
+                    <source src="videos/firstTryLevelOne.mp4" type="video/mp4">
+                </video>
+                
             </div>
         </div>
     </main>
