--- a/firstTry.html
+++ b/firstTry.html
@@ -24,7 +24,7 @@
                 <p> Ce projet est mon premier jeu développé en utilisant l'Unreal Engine 5.</p>
                 <p> Ce jeu est entièrement fait par moi-même, seul. (Projet débuté le 22 novembre 2024)</p>
                 <p> Le jeu se voudrait être un jeu de plateformes 3D en vue à la troisième personne dans des univers coloré. </p>
-                <p> Le but du jeu est de trouver un moyen de réunir 3 amulettes disséminés dans différents mondes.</p>
+                <p> Le but du jeu n'est pas encore clairement défini.</p>
                 <p> Ma principale inspiration est un jeu que j'ai beaucoup aimé faire et qui se nomme Supraland.</p>
             </div>
         </div>
